--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -3,29 +3,18 @@ name: Deploy GitHub Pages
 on:
   push:
     branches:
-      - main  
+      - main 
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-
-    - name: Install dependencies and build
-      run: |
-        cd docx
-        npm install
-        npm run build  # 如果有构建步骤，修改为适合你的命令
-
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docx/dist  # 修改为构建输出目录
+        publish_dir: ./docx  # 指定包含 index.html 的目录
